--- a/Index.html
+++ b/Index.html
@@ -4,33 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=, initial-scale=1.0">
         <title>CafeBar</title>
-        <link rel="stylesheet" href="../ESTILOS/Home.css">
-        <link rel="shortcut icon" href="../IMG/LOGO DE CAFEBAR.png" type="image/x-icon">
+        <link rel="stylesheet" href="../CAFEBAR/ESTILOS/Home.css">
+        <link rel="shortcut icon" href="../CAFEBAR/IMG/LOGO DE CAFEBAR.png" type="image/x-icon">
         <title>CAFE - BAR</title>
     </head>
     <body>
         <header>
-            <img src = "../IMG/image 48.png">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="home">Home</a>
-                    </li>
-                    <li>
-                        <a href="menu">Menu</a>
-                    </li>
-                    <li>
-                        <a href="tienda">Tienda </a>
-                    </li>
-                    <li>
-                        <a href="contacto">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
+            <img class="fotoheader" src = "../CAFEBAR/IMG/IMAGEN PARA HEADER INICIO.png">
+            <img class="fotoheader" src ="IMG/IMAGEN HEADER BLC Y NEG.png">
+            <img class="fotoheader" src = "../CAFEBAR/IMG/IMAGEN PARA HEADER INICIO.png">
         </header>
+        <ul class="nav">
+            <li class="li">
+                <a class="link" href="#">Home</a>
+            </li>
+            <li class="li">
+                <a class="link" href="menu">Menu</a>
+            </li>
+            <li class="li">
+                <a class="link" href="tienda">Tienda </a>
+            </li>
+            <li class="li">
+                <a class="link" href="../CAFEBAR/COMPONENTES/Contacto.html">Contacto</a>
+            </li>
+        </ul>
         <main>
             <h1>Café Bar</h1>
-            <img id="fondo" src ="../IMG/BACKGROUND.png">
+            <img id="fondo" src ="../CAFEBAR//IMG/BACKGROUND.png">
             <section id="cafe-bar">
                 <h3>Home</h3>
         
