menu html y css

--- a/COMPONENTES/Menu.html
+++ b/COMPONENTES/Menu.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../ESTILOS/Menu.css">
 </head>
 <body>
     <header>
-        <h1>Menú Cafe bar</h1>
-        <div>
-            <img src="../IMG/granoscafe.png" alt="Foto taza"width=300px>
-            <img src="../IMG/Chop.jpg" alt="Foto torta">
-            <img src="../IMG/menutorta.jpg" alt="Foto chop">
-            <img src="../IMG/tazacafe.png"alt="foto Granos cafe" width="300px">
-        </div>
+        <h1>Menú</h1>
+        <h2 class="cafe"> Café Bar</h2>
     </header>
-
     <section>
         
+        <div class="contenedor">
+            <img class="img1" src="../IMG/granoscafe.png" alt="Fotogranos"width=300px>
+            <img class="img2" src="../IMG/Chop.jpg" alt="fotochop">
+            <img class="img3" src="../IMG/menutorta.jpg" alt="fototorta">
+            <img class="img4" src="../IMG/tazacafe.png"alt="tazacafe" width="300px">
+        </div>
+    </section>
+
+    </body>
+        
         <h2>Clasicos</h2>
-          <ul>
+          <ul class="lista">
                     <li>Cafe latte -$1500</li>
                     <li>Capuchino -$1800</li>                           
                     <li>Espresso cortado -$1200</li>
@@ -29,7 +34,7 @@
 
 
         <h2> Tortas</h2>
-        <ul>
+        <ul class="lista">
            <li>Torta Rogel - $7000</li>
            <li> Choco torta -$8000</li>
            <li>Bomba de chocolate -$9000</li>
@@ -39,7 +44,7 @@
         </ul>
 
         <h2> Frias/frape</h2>
-       <ul>
+       <ul class="lista">
             <li> Cerveza Porron -$1000</li>
              <li>Bud Light -$1800</li>
              <li>Budweiser -$1900</li>
